# notion-df

./: .gitignore  README.md  pyproject.toml
app/: my_block.py
app/action/: __routine__.py  match.py  migration_backup.py
app/action/media_scrap/: gy_lib_scraper.py  main.py
app/script/: edit_relative_properties.py  inspect_relations.py
